SONAR-5550 Overflow issue when shows stacktrace in the component viewer tests header

--- a/server/sonar-web/src/main/less/style.less
+++ b/server/sonar-web/src/main/less/style.less
@@ -1961,9 +1961,12 @@ ul.bullet li {
 }
 
 .rule-desc pre, .property pre, .bubble-popup pre, .coding-rules-detail-parameter pre {
+  display: inline-block;
+  min-width: 100%;
   margin: 10px 0 !important;
   padding: 10px !important;
   border: 1px dashed #aaa;
+  .box-sizing(border-box);
   font-size: 12px;
   font-family: monospace;;
 }
